# Openwrite_skill

./: .gitignore  PLAN.md  README.md  SKILL.md  findings.md  novel_config.yaml  pyproject.toml  task_plan.md
config/: novel_config.example.yaml
craft/: README.md  dialogue_craft.md  humanization.yaml  rhythm_craft.md  scene_craft.md
docs/: AGENT_MATRIX.md  CLEANUP_REPORT.md  MANUAL_TEST_PLAYBOOK.md  MIGRATION_GUIDE.md  SKILLIFICATION_PLAN.md  SYNC_MATRIX.md
docs/plans/: 2026-03-27-directory-refactor.md  2026-03-29-single-source-frontmatter.md  (+6 more)
models/: character.py  context_package.py  foreshadowing.py  outline.py
tests/: test_agent_director.py  test_agent_orchestrator.py  test_agent_session.py  test_agent_tool_runtime.py  test_character_sync.py  test_cli_agent.py  test_cli_status.py  test_context_builder.py  test_core.py  test_dante_actions.py  test_dante_shell.py  test_integration.py  test_llm_client.py  test_outline_sync.py  test_readme_svg.py  test_standard_test_novel_fixture.py  test_story_planning.py  test_visualization.py  test_workflow_scheduler.py  test_world_query.py
tools/: __init__.py  agent_policy.py  architect.py  chapter_assembler.py  character_sync.py  cli.py  context_builder.py  data_queries.py  dialogue_fingerprint.py  foreshadowing_manager.py  goethe.py  init_project.py  outline_parser.py  outline_serializer.py  outline_sync.py  post_validator.py  progressive_compressor.py  radar.py  source_sync.py  state_validator.py  story_planning.py  style_extraction_pipeline.py  truth_manager.py  utils.py  wizard.py  workflow_scheduler.py  world_query.py
(+170 files in other folders)
